--- a/src/css/ui/card.css
+++ b/src/css/ui/card.css
@@ -1,3 +1,25 @@
+#card-container {
+  width: 100%;
+  max-width: 1536px;
+  display: grid;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-items: center;
+  row-gap: 45px;
+  @media (min-width: 640px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (min-width: 1024px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @media (min-width: 1280px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
 .card {
   height: 330px;
   width: 260px;
@@ -21,6 +43,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
+}
+
+.card-thumbnail img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* or contain */
+  border-radius: 10px;
 }
 
 .card-text {
