--- a/src/css/ui/card.css
+++ b/src/css/ui/card.css
@@ -1,70 +1,140 @@
 #card-container {
   width: 100%;
-  max-width: 1536px;
+  max-width: 1248px;
   display: grid;
   flex-wrap: wrap;
   justify-content: center;
   justify-items: center;
-  row-gap: 45px;
+  gap: 32px;
+  row-gap: 32px;
+  padding-left: 40px;
+
   @media (min-width: 640px) {
     grid-template-columns: repeat(1, 1fr);
   }
+
   @media (min-width: 768px) {
     grid-template-columns: repeat(2, 1fr);
   }
+
   @media (min-width: 1024px) {
     grid-template-columns: repeat(3, 1fr);
   }
+
   @media (min-width: 1280px) {
     grid-template-columns: repeat(4, 1fr);
   }
 }
 
 .card {
-  height: 330px;
-  width: 260px;
-  border: 1px solid #000;
+  display: flex;
+  border: 0;
+  width: 288px;
+  padding: 16px;
   border-radius: 14px;
-  padding: 10px;
-  cursor: pointer;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  gap: 16px;
+  border-radius: 16px;
   text-decoration: none;
-  color: inherit;
-}
-
-.card-thumbnail {
-  width: 95%;
-  height: 65%;
-  background: #d9d9d9;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
+  background: #FFF;
 }
 
 .card-thumbnail img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; /* or contain */
-  border-radius: 10px;
+  width: 256px;
+  height: 176px;
+  border-radius: 16px;
+  background: url(<path-to-image>) lightgray 50% / cover no-repeat;
+  object-fit: cover;
+  /* or contain */
 }
 
-.card-text {
-  width: 100%;
-  height: 35%;
-  padding: 10px;
+
+.card-thumbnail {
+  display: flex;
+  height: 176px;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 16px;
+  background: #EDEDED;
 }
+
+
+.card-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+  align-self: stretch;
+}
+
+.lecture-name {
+  color: #000;
+  font-family: Pretendard;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.introduce {
+  flex: 1 0 0;
+  color: #666;
+  font-family: Pretendard;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+
+.card-row-level-category {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  padding-top: 12px;
+}
+
+.level {
+  color: #000;
+  font-family: Pretendard;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  white-space: nowrap;
+
+  display: inline-flex;
+  padding: 0 12px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 32px;
+  background: #D5FCDC;
+}
+
+.category {
+  color: #000;
+  font-family: Pretendard;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+
+  display: flex;
+  padding: 0 12px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 32px;
+  background: #E7E7F1;
+}
+
 
 .card-row {
   display: flex;
   align-items: center;
   gap: 10px;
-}
-
-.card-row h5 {
-  margin: 0;
 }
