--- a/layout/sidebar.html
+++ b/layout/sidebar.html
@@ -5,72 +5,31 @@
     <ul class="sidebar__list">
       <li class="sidebar__item sidebar__item--active">
         <a class="sidebar__link" href="#my-class">
-          <span class="sidebar__icon" aria-hidden="true"></span>
-          <span class="sidebar__text">My 강의</span>
+          <span class="sidebar__text" style="color:black font-">My 강의</span>
         </a>
       </li>
       <li class="sidebar__item">
-        <a class="sidebar__link" href="#materials">
-          <span class="sidebar__icon" aria-hidden="true"></span>
+        <a class="sidebar__link" href="#">
           <span class="sidebar__text">자료등록</span>
         </a>
       </li>
       <li class="sidebar__item">
-        <a class="sidebar__link" href="#course-manage">
-          <span class="sidebar__icon" aria-hidden="true"></span>
+        <a class="sidebar__link" href="#">
           <span class="sidebar__text">수강관리</span>
         </a>
       </li>
       <li class="sidebar__item">
-        <a class="sidebar__link" href="#attendance">
-          <span class="sidebar__icon" aria-hidden="true"></span>
+        <a class="sidebar__link" href="#">
           <span class="sidebar__text">출석부</span>
         </a>
       </li>
       <li class="sidebar__item">
-        <a class="sidebar__link" href="#dashboard">
-          <span class="sidebar__icon" aria-hidden="true"></span>
+        <a class="sidebar__link" href="#">
           <span class="sidebar__text">대시보드</span>
         </a>
       </li>
     </ul>
   </nav>
-
-
-
-<!--
-
-  <nav class="second-sidebar-menu">
-    <ul style="font-size: 18px;">
-      <li style="margin: 22px 0;">
-        <a href="#">
-          <span class="title">MyPage</span>
-        </a>
-      </li>
-      <li style="margin: 22px 0">
-        <a href="#">
-          <span class="title">Notice</span>
-        </a>
-      </li>
-      <li style="margin: 22px 0">
-        <a href="#">
-          <span class="title">Q.A</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
-    -->
-
-
-
-
-
-
-
-
-
-
-
 
 </aside>
 
