--- a/layout/sidebar.html
+++ b/layout/sidebar.html
@@ -1,35 +1,36 @@
-
 <aside class="sidebar" aria-label="My page navigation">
-  <h2 class="sidebar__title">My page</h2>
-  <nav class="sidebar__nav" aria-label="Sections">
-    <ul class="sidebar__list">
-      <li class="sidebar__item sidebar__item--active">
-        <a class="sidebar__link" href="#my-class">
-          <span class="sidebar__text" style="color:black font-">My 강의</span>
-        </a>
-      </li>
-      <li class="sidebar__item">
-        <a class="sidebar__link" href="#">
-          <span class="sidebar__text">자료등록</span>
-        </a>
-      </li>
-      <li class="sidebar__item">
-        <a class="sidebar__link" href="#">
-          <span class="sidebar__text">수강관리</span>
-        </a>
-      </li>
-      <li class="sidebar__item">
-        <a class="sidebar__link" href="#">
-          <span class="sidebar__text">출석부</span>
-        </a>
-      </li>
-      <li class="sidebar__item">
-        <a class="sidebar__link" href="#">
-          <span class="sidebar__text">대시보드</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+  <div style="position: absolute; top:127px; left: 40px; display: flex; flex-direction: column; gap: 16px">
+    <h2 class="sidebar__title">My page</h2>
+    <nav class="sidebar__nav" aria-label="Sections">
+      <ul class="sidebar__list">
+        <li class="sidebar__item sidebar__item--active">
+          <a class="sidebar__link" href="#my-class">
+            <span class="sidebar__text" style="color:black;font-weight: 600;">My 강의</span>
+          </a>
+        </li>
+        <li class="sidebar__item">
+          <a class="sidebar__link" href="#">
+            <span class="sidebar__text">자료등록</span>
+          </a>
+        </li>
+        <li class="sidebar__item">
+          <a class="sidebar__link" href="#">
+            <span class="sidebar__text">수강관리</span>
+          </a>
+        </li>
+        <li class="sidebar__item">
+          <a class="sidebar__link" href="#">
+            <span class="sidebar__text">출석부</span>
+          </a>
+        </li>
+        <li class="sidebar__item">
+          <a class="sidebar__link" href="#">
+            <span class="sidebar__text">대시보드</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 
 </aside>
 
