--- a/src/css/ui/modal.css
+++ b/src/css/ui/modal.css
@@ -49,7 +49,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem 2rem 1rem;
+  padding: 1.5rem 12px 1rem;
   min-height: 48px;
 }
 
@@ -89,7 +89,7 @@
 
 .form-group {
   margin-bottom: 1.5rem;
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 12px;
 }
 
 .form-group label {
@@ -131,6 +131,7 @@
   margin-top: 2rem;
   padding: 0 2rem;
 }
+
 .delete-btn,
 .cancel-btn,
 .save-btn {
