--- a/src/css/ui/page-nation.css
+++ b/src/css/ui/page-nation.css
@@ -1,17 +1,9 @@
 #page-nation {
-  position: absolute;
   display: flex;
   align-items: center;
-  margin-top: 20px;
   justify-content: end;
   gap: 10px;
-  padding-top: 10px;
-  padding-bottom: 30px;
-  padding-right: 10px;
-  border-top: 1px solid #d9d9d9;
-  top: 950px;
-  width: calc(100% - 35px);
-  right: -10px;
+  width: 100%;
 }
 
 .page-btn {
