--- a/src/css/layout/sidebar.css
+++ b/src/css/layout/sidebar.css
@@ -22,6 +22,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  padding-top: 32px;
 }
 
 .sidebar__list {
@@ -29,7 +30,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 24px;
+  gap: 16px;
   align-self: stretch;
 }
 
@@ -116,20 +117,12 @@
   border-radius: 4px;
 }
 
-/*
-.logo {
-  width: 95%;
-  height: 50px;
-  min-height: 50px;
-  background: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 7px;
-  margin-bottom: 7px;
-}
-*/
 
+.logo {
+background-image: url("/src/img/LOGO_LCC.svg");
+width:118px;
+height: 30px;
+}
 
 .sidebar-menu,
 .second-sidebar-menu {
@@ -151,3 +144,4 @@
   padding: 0;
   margin: 0;
 }
+
