--- a/src/css/ui/modal.css
+++ b/src/css/ui/modal.css
@@ -25,9 +25,7 @@
   background: white;
   border-radius: 16px;
   width: 100%;
-  height: calc(100% + 32px);
   max-width: 960px;
-  max-height: 80vh;
   box-shadow: 0 25px 50px rgba(0, 0, 0, 0.25);
   animation: slideIn 0.3s ease;
   overflow-x: hidden;
@@ -49,7 +47,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem 12px 1rem;
+  padding-top: 40px;
+  padding-bottom: 25px;
+  padding-left: 40px;
+  padding-right: 40px;
   min-height: 48px;
 }
 
@@ -88,8 +89,17 @@
 }
 
 .form-group {
-  margin-bottom: 1.5rem;
-  padding: 0.5rem 12px;
+  margin-bottom: 32px;
+  padding-top: 8px;
+  padding-bottom: 0px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.form-group-2 {
+  margin-bottom: 32px;
+  padding-top: 8px;
+  padding-bottom: 0px;
 }
 
 .form-group label {
@@ -125,11 +135,10 @@
 }
 
 .modal-actions {
+  padding: 40px 40px;
   display: flex;
   gap: 0.75rem;
   justify-content: flex-end;
-  margin-top: 2rem;
-  padding: 0 2rem;
 }
 
 .delete-btn,
