--- a/src/css/ui/page-nation.css
+++ b/src/css/ui/page-nation.css
@@ -1,18 +1,24 @@
 #page-nation {
   display: flex;
   align-items: center;
-  justify-content: end;
-  gap: 10px;
+  justify-content: center;
+  gap: 16px;
   width: 100%;
+  margin-top: 48px;
 }
 
 .page-btn {
   cursor: pointer;
-  padding: 5px 10px;
+  width: 25px;
+  height: 25px;
   border: none;
   background: #e0e7ff;
   font-size: 14px;
-  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  text-align: center;
 }
 
 .page-btn.is-active {
