카드 리스트 동작 버그 수정 및 카드 0개 일 때 0개 알림 페이지 설정

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -39,11 +39,8 @@ html,
 body {
   height: 100%;
   margin: 0;
-  /* 기본 여백 제거 */
   min-height: 100vh;
-  /* 화면 전체 덮기 */
-  font-family: var(--font-sans);
-  /* Pretendard - 폰트 전역 설정. */
+  font-family: Pretendard;
 }
 
 .container {
