--- a/src/css/global.css
+++ b/src/css/global.css
@@ -72,6 +72,7 @@ p {
 
 .create-modal-toggle-btn {
   color: #FFF;
+  cursor: pointer;
   font-family: Pretendard;
   font-size: 16px;
   font-style: normal;
