--- a/src/css/ui/card.css
+++ b/src/css/ui/card.css
@@ -107,7 +107,7 @@
   height: 44px; /* ✅ 항상 높이 고정 */
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2; /* 2줄까지만 표시 */
+  -webkit-line-clamp: ; /* 2줄까지만 표시 */
   overflow: hidden; /* 넘치는 텍스트 숨김 */
   flex: 1 0 0;
   color: #666;
